CW fixed bugs + build